[package]
name = "uc"
version = "0.1.0"
edition = "2021"
authors = ["Kyana <kyana0817@gmail.com>"]
description = "parcent encode for command-line tool."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
percent-encoding = "2.2.0"
clap = { version = "4.1.4", features = ["derive"] }
